# SpartyGnome

./: CMakeLists.txt  SpartyGnomeApp.cpp  SpartyGnomeApp.h  main.cpp  pch.h
SpartyGnome/: main.cpp
SpartyGnome-win/SpartyGnomeWin/: main.h
SpartyGnome/SpartyGnomeLib/: SpartyGnomeView.cpp
SpartyGnomeLib/: BackgroundImage.cpp  BackgroundImage.h  CMakeLists.txt  CollisionVisitor.cpp  CollisionVisitor.h  DrawMessagesVisitor.cpp  DrawMessagesVisitor.h  DrawScrollingVisitor.cpp  DrawScrollingVisitor.h  DrawStaticVisitor.cpp  DrawStaticVisitor.h  EraserVisitor.cpp  EraserVisitor.h  Game.cpp  Game.h  HorizontalCollisionVisitor.cpp  HorizontalCollisionVisitor.h  InteractionCollisionVisitor.cpp  InteractionCollisionVisitor.h  Item.cpp  Item.h  ItemDoor.cpp  ItemDoor.h  ItemLevelTimer.cpp  ItemLevelTimer.h  ItemMessage.cpp  ItemMessage.h  ItemMessageAnimated.cpp  ItemMessageAnimated.h  ItemMoney.cpp  ItemMoney.h  ItemScoreBoard.cpp  ItemScoreBoard.h  ItemSpartyGnome.cpp  ItemSpartyGnome.h  ItemTuitionUp.cpp  ItemTuitionUp.h  ItemVisitor.cpp  ItemVisitor.h  MainFrame.cpp  (+21 more)
Tests/: CMakeLists.txt  DrawScrollingVisitorTest.cpp  DrawStaticVisitorTest.cpp  GameTest.cpp  GravityTest.cpp  JumpTest.cpp  PlatformTest.cpp
levels/: level0ButWithFakePlatforms.xml  level1.xml  level2.xml  level3.xml  levelSavesTest.xml  levelSavesTest2.xml  levelSavesTestF.xml  withdoor.xml
